--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chat the hell up",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon --debug index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,9 +15,17 @@
   "author": "Bruno Casanova <deftonicks_me@hotmail.com>",
   "license": "GPL v3",
   "dependencies": {
+    "body-parser": "^1.12.3",
+    "bootstrap": "^3.3.4",
+    "cookie": "^0.1.2",
+    "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-ejs-layouts": "^1.1.0",
+    "express-session": "^1.11.1",
+    "less": "^2.5.0",
+    "moment": "^2.10.2",
+    "mongoose": "^4.0.2",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.5"
   }
