--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "chathellup",
     "brunocasanova"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/brunocasanova/chathellup.git"
+  },
   "author": "Bruno Casanova <deftonicks_me@hotmail.com>",
   "license": "GPL v3",
   "dependencies": {
+    "bluebird": "^2.10.0",
     "body-parser": "^1.12.3",
     "bootstrap": "^3.3.4",
     "cookie": "^0.1.2",
@@ -28,5 +33,8 @@
     "mongoose": "^4.0.2",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.5.0"
   }
 }
